//
// @file:   testItem.proto
// @brief:  这个文件是通过工具自动生成的，建议不要手动修改
//

syntax = "proto3";
package pb;
option go_package = "pb/;pb";

message testItem{
  // 物品Id
  int32 id = 1;
  // 物品名称
  string name = 2;
  // 物品类型
  int32 itemType = 3;
  // 初始物品数量
  int32 number = 4;
}

message testItem_Array {
  repeated testItem items = 1;
}
